Fixed clearCalculator div alignment

--- a/calculator.css
+++ b/calculator.css
@@ -34,3 +34,8 @@ button {
 button:hover {
   background-color: #ddd;
 }
+.resetCalculator {
+  margin-top: 5px;
+  align-content: center;
+  justify-content: center;
+}
